kubectl/hello-world-java-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hello
spec:
  containers:
    - name: hello
      image: hello-world-java:latest
      imagePullPolicy: Never
