kubectl/hello-test-stateful.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: hello-stateful-set
spec:
  selector:
    matchLabels:
      app: hello-ss
  serviceName: "hello-ss"
  replicas: 2
  template:
    metadata:
      labels:
        app: hello-ss
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: mysql
        image: hashicorp/http-echo:0.2.3
        ports:
        - containerPort: 3306
---
kind: Pod
apiVersion: v1
metadata:
  name: foo-app
  labels:
    app: http-echo
spec:
  containers:
    - name: foo-app
      image: hashicorp/http-echo:0.2.3
      args:
        - "-text=foo"
---
kind: Pod
apiVersion: v1
metadata:
  name: bar-app
  labels:
    app: http-echo
spec:
  containers:
    - name: bar-app
      image: hashicorp/http-echo:0.2.3
      args:
        - "-text=bar"
---
kind: Service
apiVersion: v1
metadata:
  name: foo-bar-service
spec:
  type: LoadBalancer
  selector:
    app: http-echo
  ports:
    # Default port used by the image
    - port: 5678
