kubectl/hello-world-java-svc.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hello
spec:
  containers:
    - name: hello
      image: hello-world-java:latest
      imagePullPolicy: Never
---
kind: Service
apiVersion: v1
metadata:
  name: hello-service
spec:
  selector:
    app: hello
  ports:
    - port: 3333
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: hello-ingress
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: "/hello"
            backend:
              service:
                name: hello-service
                port:
                  number: 3333
---
