kubectl/test-deployment.yaml
kind: Pod
apiVersion: v1
metadata:
  name: test-app
  labels:
    app: test-app
spec:
  containers:
    - name: test-app
      image: hashicorp/http-echo:latest
      args:
        - "-text=The test has been successful!"
---
kind: Service
apiVersion: v1
metadata:
  name: test-service
spec:
  selector:
    app: test-app
  ports:
    - port: 5678
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: "/app"
            backend:
              service:
                name: test-service
                port:
                  number: 5678
